<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="prev_button">PREV</string>
    <string name="next_button">NEXT</string>
    <string name="cheat_button">Cheat!</string>
    <string name="show_answer_button">Show answer</string>

    <string name="correct_toast">Correct!</string>
    <string name="wrong_toast">Wrong!</string>
    <string name="cheat_toast">Cheating is wrong!</string>
    <string name="default_answer_text">Answer</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="api_text">API Level %d</string>

    <string name="question_australia">Canberra is the capital of Australia</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
</resources>
